tests/fixtures/invalid/max_dict_none.py
# Cannot call max() with Dict[str, int], None
x = max({"a": 1}, None)
